--- a/arch/arm64/boot/dts/altera/socfpga_stratix10_socdk.dts
+++ b/arch/arm64/boot/dts/altera/socfpga_stratix10_socdk.dts
@@ -155,6 +155,9 @@
 	i2c-sda-falling-time-ns = <890>;  /* hcnt */
 	i2c-sdl-falling-time-ns = <890>;  /* lcnt */
 
+	pinctrl-names = "default";
+	pinctrl-0 = <&i2c1_pmx_func 0>;
+
 	adc@14 {
 		compatible = "lltc,ltc2497";
 		reg = <0x14>;
