--- a/arch/arm64/boot/dts/altera/socfpga_stratix10_socdk.dts
+++ b/arch/arm64/boot/dts/altera/socfpga_stratix10_socdk.dts
@@ -63,29 +63,18 @@
 					     <15 4>;
 			};
 		};
+	};
+};
 
-		pmx0: pinmux@f7010000 {
-			pinctrl-names = "default";
-			pinctrl-0 = <
-				&i2c0_pmx_func
-				&i2c1_pmx_func
-				>;
+&pinctrl1 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&i2c1_pmx_func>;
 
-			i2c0_pmx_func: i2c0_pmx_func {
-				pinctrl-single,pins = <
-					0x68   MUX_M4	/* I2C0_SDA (IO2-B) PIN26SEL*/
-					0x6c   MUX_M4	/* I2C0_SCL (IO3-B) PIN27SEL */
-				>;
-			};
-
-			i2c1_pmx_func: i2c1_pmx_func {
-				pinctrl-single,pins = <
-					0x78   MUX_M4	/* I2C1_SDA (IO6-B) PIN30SEL) */
-					0x7c   MUX_M4	/* I2C1_SCL (IO7-B) PIN31SEL */
-				>;
-			};
-
-		};
+	i2c1_pmx_func: i2c1_pmx_func {
+		pinctrl-single,pins = <
+			0x78   0x4   /* I2C1_SDA (IO6-B) PIN30SEL) */
+			0x7c   0x4   /* I2C1_SCL (IO7-B) PIN31SEL */
+		>;
 	};
 };
 
@@ -156,7 +145,7 @@
 	i2c-sdl-falling-time-ns = <890>;  /* lcnt */
 
 	pinctrl-names = "default";
-	pinctrl-0 = <&i2c1_pmx_func 0>;
+	pinctrl-0 = <&i2c1_pmx_func>;
 
 	adc@14 {
 		compatible = "lltc,ltc2497";
